refactor(nbp): fix exception log message in NbpHttpClient