@@ -1,6 +1,7 @@
 package pl.cryptotax.infrastructure.nbp;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.web.util.UriComponentsBuilder;
@@ -10,6 +11,7 @@ import pl.cryptotax.infrastructure.nbp.dto.NbpResponse;
 import pl.cryptotax.infrastructure.nbp.exception.NbpClientException;
 
 import java.io.IOException;
+import java.math.BigDecimal;
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
@@ -17,6 +19,7 @@ import java.net.http.HttpResponse;
 import java.time.LocalDate;
 
 @Component
+@Slf4j
 public class NbpHttpClient implements NbpClient {
 
     private final HttpClient httpClient;
@@ -42,6 +45,7 @@ public class NbpHttpClient implements NbpClient {
                 URI uri = UriComponentsBuilder.fromUriString(urlTemplate)
                         .buildAndExpand(currency, currentDate)
                         .toUri();
+                log.debug("Sending GET request to NBP API: {}", uri);
 
                 HttpRequest request = HttpRequest.newBuilder()
                         .uri(uri)
@@ -52,21 +56,28 @@ public class NbpHttpClient implements NbpClient {
 
                 if (response.statusCode() == 200) {
                     NbpResponse dto = objectMapper.readValue(response.body(), NbpResponse.class);
-                    return new ExchangeRate(currency, dto.rates().get(0).mid(), currentDate);
+                    BigDecimal rate = dto.rates().getFirst().mid();
+                    log.info("Successfully fetched NBP rate for currency {} on date {}: {}", currency, currentDate, rate);
+
+                    return new ExchangeRate(currency, dto.rates().getFirst().mid(), currentDate);
                 } else if (response.statusCode() == 404) {
+                    log.warn("Rate not found for currency {} on date {}. Retrying previous day...", currency, currentDate);
                     currentDate = currentDate.minusDays(1);
                     attempts++;
                 } else {
+                    log.error("Unexpected NBP API status code: {} for URI: {}", response.statusCode(), uri);
                     throw new NbpClientException("Unexpected NBP API status code: " + response.statusCode());
                 }
             } catch (IOException e) {
+                log.error("Communication or JSON mapping error with NBP API for currency {}", currency, e);
                 throw new NbpClientException("Error during communication or JSON mapping with NBP API", e);
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
+                log.error("Thread was interrupted while waiting for NBP API response for currency {}", currency, e);
                 throw new NbpClientException("Thread was interrupted while waiting for NBP API response", e);
             }
         }
-
+        log.error("NBPClientException Could not find NBP exchange rate for {} after {} attempts before {}", currency, maxAttempts, effectiveDate);
         throw new NbpClientException("Could not find NBP exchange rate for " + currency + " after " + maxAttempts + " attempts before " + effectiveDate);
     }
 }
